[package]
name = "trs-js"
version = "0.1.0"
authors = ["Vivek Nair <vivek@nair.me>"]
license = "MIT"
edition = "2018"
description = "Traceable Ring Signatures (TRS) for JavaScript & Node.js"
keywords = ["ring", "signature", "crypto", "cryptography"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/VCNinc/trs.js"
documentation = "https://github.com/VCNinc/trs.js"

[features]
default = ["std"]
std = ["blake2/std", "curve25519-dalek/std", "digest/std"]

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = { version = "0.9", default-features = false }
curve25519-dalek = { version = "3.0", default-features = false, features = ["u64_backend"] }
digest = { version = "0.9", default-features = false }
generic-array = "0.9"
rand_core  = { version = "0.5", default-features = false }
wasm-bindgen = "0.2"
rand = "0.7"
base64 = "0.13"
